<resources>
    <string name="app_name">PaperChaser</string>
    <string name="buttonAddMember">Add member</string>
    <string name="buttonAddTransaction">Add transaction</string>
    <string name="enter_amount">Enter amount</string>
    <string name="date">Date</string>
    <string name="textviewaccount">Choose account</string>
    <string name="textviewdate">DD/MM/YYYY</string>
    <string name="name">First time? Input your name below</string>
    <string name="enter_string_app_name">Enter full name</string>
    <string name="textview">Name</string>
    <string name="transactions">Transactions</string>
    <string name="members">Members</string>

    <array name="accounts">
        <item>Bank</item>
        <item>Cash in Hand</item>
        <item>Capital</item>
        <item>short-loan</item>
    </array>

</resources>
