<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.too.paperchaser.AddTransactionActivity">


    <TextView
        android:id="@+id/textViewMemberName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textviewdate" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date" />

    <Button
        android:id="@+id/buttonAddTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddTransaction" />

    <TextView
        android:id="@+id/textViewMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/transactions"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <ListView
        android:id="@+id/listViewTransactions"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
