<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.too.paperchaser.MainActivity">


    <TextView
        android:id="@+id/textViewMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editTextMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_string_app_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonAddMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddMember" />
    <TextView
        android:id="@+id/textViewMembers2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/members"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <ListView
        android:id="@+id/listViewMembers"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
